--- a/SWD/SWD/ContentWindow.xaml
+++ b/SWD/SWD/ContentWindow.xaml
@@ -82,7 +82,7 @@
                         <Label x:Name="lblColsAmount" Grid.Column="0" Grid.Row="1" Content="Amount:" HorizontalAlignment="Left" VerticalAlignment="Center"/>
                         <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center">
                             <Button x:Name="btn_Col_Increase" Foreground="Gray" FontSize="12" Content="▲" Width="30" Height="30" Click="Increase_Click" />
-                            <TextBox x:Name="tbColAmount" Width="60" Height="30" Text="1" TextAlignment="Center" PreviewKeyDown="tbColAmount_PreviewKeyDown" GotFocus="PopupOpen" LostFocus="PopupClose" />
+                            <TextBox x:Name="tbColAmount" Width="60" Height="30" Text="1" TextAlignment="Center" PreviewKeyDown="tbColAmount_PreviewKeyDown" GotFocus="PopupChange" LostFocus="PopupChange" />
                             <Popup x:Name="popCol" Placement="Top" PlacementTarget="{Binding ElementName=tbColAmount}" IsOpen="False">
                                 <TextBlock x:Name="tbColPop" Background="AliceBlue" Padding="5">Insert value from 1 to 12 and hit enter.</TextBlock>
                             </Popup>
@@ -90,12 +90,12 @@
                         </StackPanel>
                         <Label x:Name="lblColsModify" Grid.Column="0" Grid.Row="2" Content="Modify at:" HorizontalAlignment="Left" VerticalAlignment="Center"/>
                         <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center">
-                            <Button x:Name="btn_Col_InsertAt" Foreground="Gray" FontSize="20" Content="+" Width="30" Height="30" Click="Increase_Click" FontWeight="ExtraBold"/>
-                            <TextBox x:Name="tbColModify" Width="60" Height="30" Text="1" TextAlignment="Center" GotFocus="PopupOpen" LostFocus="PopupClose" />
+                            <Button x:Name="btn_Col_InsertAt" Foreground="Gray" FontSize="20" Content="+" Width="30" Height="30" Click="Insert_Click" FontWeight="ExtraBold"/>
+                            <TextBox x:Name="tbColModify" Width="60" Height="30" Text="1" TextAlignment="Center" GotFocus="PopupChange" LostFocus="PopupChange" PreviewKeyDown="tbModify_PreviewKeyDown" />
                             <Popup x:Name="popColModify" Placement="Bottom" PlacementTarget="{Binding ElementName=tbColModify}" IsOpen="False">
                                 <TextBlock x:Name="tbPopColModify" Background="AliceBlue" Padding="5">Insert value from 1 to 12.</TextBlock>
                             </Popup>
-                            <Button x:Name="btn_Col_DeleteAt" Foreground="Gray" FontSize="20" Content="-" Width="30" Height="30" Click="Decrease_Click" FontWeight="ExtraBold"/>
+                            <Button x:Name="btn_Col_DeleteAt" Foreground="Gray" FontSize="20" Content="-" Width="30" Height="30" Click="Delete_Click" FontWeight="ExtraBold"/>
                         </StackPanel>
                     </Grid>
 
@@ -116,7 +116,7 @@
                         <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="Right" Width="Auto">
                             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                                 <Button x:Name="btn_Row_Increase" Foreground="Gray" FontSize="12" Content="▲" Width="30" Height="30" Click="Increase_Click" HorizontalAlignment="Right"/>
-                                <TextBox x:Name="tbRowAmount" Width="60" Height="30" Text="1" TextAlignment="Center" LostFocus="PopupClose" GotFocus="PopupOpen" PreviewKeyDown="tbRowAmount_PreviewKeyDown" HorizontalAlignment="Right"/>
+                                <TextBox x:Name="tbRowAmount" Width="60" Height="30" Text="1" TextAlignment="Center" LostFocus="PopupChange" GotFocus="PopupChange" PreviewKeyDown="tbRowAmount_PreviewKeyDown" HorizontalAlignment="Right"/>
                                 <Popup x:Name="popRow" Placement="Top" PlacementTarget="{Binding ElementName=tbRowAmount}" IsOpen="False">
                                     <TextBlock x:Name="tbRowPop" Background="AliceBlue" Padding="5">Insert a numeric value and hit enter.</TextBlock>
                                 </Popup>
@@ -125,12 +125,12 @@
                         </StackPanel>
                         <Label x:Name="lblRowsModify" Content="Modify at:" Grid.Row="2" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left"></Label>
                         <StackPanel Orientation="Horizontal" Grid.Column="2" Grid.Row="2" Grid.ColumnSpan="2"  HorizontalAlignment="Right" VerticalAlignment="Center">
-                            <Button x:Name="btn_Row_InsertAt" Foreground="Gray" FontSize="20" Content="+" Width="30" Height="30" Click="Increase_Click" FontWeight="ExtraBold"/>
-                            <TextBox x:Name="tbRowModify" Width="60" Height="30" Text="1" TextAlignment="Center" LostFocus="PopupClose" GotFocus="PopupOpen" />
+                            <Button x:Name="btn_Row_InsertAt" Foreground="Gray" FontSize="20" Content="+" Width="30" Height="30" Click="Insert_Click" FontWeight="ExtraBold"/>
+                            <TextBox x:Name="tbRowModify" Width="60" Height="30" Text="1" TextAlignment="Center" LostFocus="PopupChange" GotFocus="PopupChange" PreviewKeyDown="tbModify_PreviewKeyDown"/>
                             <Popup x:Name="popRowModify" Placement="Bottom" PlacementTarget="{Binding ElementName=tbRowModify}" IsOpen="False">
                                 <TextBlock x:Name="tbPopRowModify" Background="AliceBlue" Padding="5">Insert a numeric value.</TextBlock>
                             </Popup>
-                            <Button x:Name="btn_Row_DeleteAt" Foreground="Gray" FontSize="20" Content="-" Width="30" Height="30" Click="Decrease_Click" FontWeight="ExtraBold"/>
+                            <Button x:Name="btn_Row_DeleteAt" Foreground="Gray" FontSize="20" Content="-" Width="30" Height="30" Click="Delete_Click" FontWeight="ExtraBold"/>
                         </StackPanel>
                     </Grid>
                 </Grid>
