--- a/SWD/SWD/ContentWindow.xaml
+++ b/SWD/SWD/ContentWindow.xaml
@@ -252,7 +252,21 @@
 
                     HorizontalAlignment="Stretch"
                     VerticalAlignment="Stretch"
-                    SelectionUnit="Cell"/>
+                    SelectionUnit="Cell" LoadingRow="dgPages_LoadingRow"
+                          >
+                    <DataGrid.RowHeaderStyle>
+                        <Style TargetType="{x:Type DataGridRowHeader}">
+                            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                            <Setter Property="VerticalContentAlignment" Value="Stretch" />
+                            <Setter Property="Width" Value="24" />
+                            <Setter Property="Height" Value="24" />
+                            <Setter Property="Padding" Value="0" />
+                            <Setter Property="Margin" Value="0" />
+                            <Setter Property="BorderThickness" Value="0" />
+                        </Style>
+                    </DataGrid.RowHeaderStyle>
+                </DataGrid>
+
             </Grid>
         </Grid>
     </Grid>
