--- a/SWD/SWD/Content/ContentWindow.xaml
+++ b/SWD/SWD/Content/ContentWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="SWD.Content.ContentWindow"
+﻿<Window x:Name="wdContent" x:Class="SWD.Content.ContentWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,7 +7,7 @@
         xmlns:local="clr-namespace:SWD"
         mc:Ignorable="d"
         Title="ContentWindow"
-        MinHeight="700" 
+        MinHeight="900" 
         MinWidth="900" 
         WindowState="Maximized"
         WindowStyle="SingleBorderWindow">
@@ -77,7 +77,7 @@
                     </Label.Background>
                 </Label>
 
-                <Grid x:Name="gdColRow" Grid.Row="1" Grid.Column="1" Margin="20,0" VerticalAlignment="Center" Height="125">
+                <Grid x:Name="gdColRow" Grid.Row="1" Grid.Column="1" Margin="20,0" VerticalAlignment="Center" Height="175">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="1*" />
                         <ColumnDefinition Width="1*" />
@@ -89,7 +89,7 @@
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="1.5*"/>
                             <RowDefinition Height="*"/>
                             <RowDefinition Height="1.25*"/>
                         </Grid.RowDefinitions>
@@ -102,9 +102,14 @@
 
                         <Label x:Name="lblCols" 
                                Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" 
-                               Content="Columns:" 
-                               HorizontalAlignment="Center" 
+                               Content="Columns" 
+                               HorizontalAlignment="Stretch"
+                               HorizontalContentAlignment="Center"
                                VerticalAlignment="Center"
+                               BorderThickness="2"
+                               BorderBrush="LightSlateGray"
+                               Background="White"
+                               Margin="10"
                         />
 
                         <Label x:Name="lblColsAmount" Grid.Column="0" Grid.Row="1" Content="Amount:" HorizontalAlignment="Left" VerticalAlignment="Center"                                Margin="10,0,0,0"/>
@@ -133,7 +138,7 @@
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="1.5*"/>
                             <RowDefinition Height="*"/>
                             <RowDefinition Height="1.25*"/>
                         </Grid.RowDefinitions>
@@ -144,7 +149,16 @@
                             </LinearGradientBrush>
                         </Grid.Background>
 
-                        <Label x:Name="lblRows" Content="Rows:" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2"></Label>
+                        <Label x:Name="lblRows" 
+                               Content="Rows" 
+                               Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2"
+                               HorizontalAlignment="Stretch"
+                               HorizontalContentAlignment="Center"
+                               VerticalAlignment="Center"
+                               BorderThickness="2"
+                               BorderBrush="LightSlateGray"
+                               Background="White"
+                               Margin="10"></Label>
 
                         <Label x:Name="lblRowAmount" Content="Amount:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Column="0" Grid.Row="1" Margin="10,0,0,0"></Label>
                         <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="Right" Width="Auto" Margin="0,0,10,0">
