--- a/SWD/SWD/Content/ContentWindow.xaml
+++ b/SWD/SWD/Content/ContentWindow.xaml
@@ -8,7 +8,7 @@
         mc:Ignorable="d"
         Title="ContentWindow"
         MinHeight="900" 
-        MinWidth="900" 
+        MinWidth="1450" 
         WindowState="Maximized"
         WindowStyle="SingleBorderWindow">
 
@@ -51,13 +51,27 @@
             <Grid x:Name="gdContent" Margin="20" Grid.Row="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="4*" />
-                    <ColumnDefinition Width="8*" />
+                    <ColumnDefinition Width="12*" />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="1*" />
-                    <RowDefinition Height="4*"/>
+                    <RowDefinition Height="4*" />
                     <RowDefinition Height="11*" />
                 </Grid.RowDefinitions>
+
+                <Rectangle 
+                    Grid.Column="1" 
+                    Grid.Row="0" 
+                    Grid.RowSpan="3" 
+                    Margin="5,20,5,5"
+                >
+                    <Rectangle.Fill>
+                        <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                            <GradientStop Color="#10000000" Offset="0.5" />
+                            <GradientStop Color="#40000000" Offset="1" />
+                        </LinearGradientBrush>
+                    </Rectangle.Fill>
+                </Rectangle>
 
                 <Label x:Name="lblGridTitle" 
                        Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="1" 
@@ -81,6 +95,7 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="1*" />
                         <ColumnDefinition Width="1*" />
+                        <ColumnDefinition Width="1.5*" />
                     </Grid.ColumnDefinitions>
 
                     <Grid x:Name="gdCol" Grid.Row="0" Grid.Column="0" Margin="0,0,20,0">
@@ -132,7 +147,7 @@
                         </StackPanel>
                     </Grid>
 
-                    <Grid x:Name="gdRows" Grid.Column="1" Margin="20,0,0,0">
+                    <Grid x:Name="gdRows" Grid.Column="1" Margin="10,0,10,0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="*"/>
@@ -181,7 +196,71 @@
                             <Button x:Name="btn_Row_DeleteAt" Foreground="Gray" FontSize="20" Content="-" Width="30" Height="30" Click="Delete_Click" FontWeight="ExtraBold"/>
                         </StackPanel>
                     </Grid>
+                    
+                    <Grid x:Name="gdComp" Grid.Row="0" Grid.Column="2" Margin="20,0,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="1.5*"/>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="1.25*"/>
+                        </Grid.RowDefinitions>
+                        <Grid.Background>
+                            <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                                <GradientStop Color="White" Offset="0" />
+                                <GradientStop Color="LightGray" Offset="1" />
+                            </LinearGradientBrush>
+                        </Grid.Background>
+
+                        <Label x:Name="lblComps" 
+                           Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="4" 
+                           Content="Component: -" 
+                           HorizontalAlignment="Stretch"
+                           HorizontalContentAlignment="Center"
+                           VerticalAlignment="Center"
+                           BorderThickness="2"
+                           BorderBrush="LightSlateGray"
+                           Background="White"
+                           Margin="10"
+/>
+
+                        <Label x:Name="lblCompsAmount" Grid.Column="0" Grid.Row="2" Content="Start row:" HorizontalAlignment="Left" VerticalAlignment="Center"                                Margin="10,0,0,0"/>
+                        <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0">
+                            <TextBox x:Name="tbCompRow" Width="50" Height="30" Text="-" TextAlignment="Center" GotFocus="PopupChange" LostFocus="PopupChange" />
+                            <Popup x:Name="popCompRow" Placement="Top" PlacementTarget="{Binding ElementName=tbCompRow}" IsOpen="False">
+                                <TextBlock x:Name="tbPopCompRow" Background="AliceBlue" Padding="5">Insert a numeric value and hit enter.</TextBlock>
+                            </Popup>
+                        </StackPanel>
+                        <Label x:Name="lblCompsModify" Grid.Column="2" Grid.Row="2" Content="Start column:" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0"/>
+                        <StackPanel Orientation="Horizontal" Grid.Column="3" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0">
+                            <TextBox x:Name="tbCompCol" Width="50" Height="30" Text="-" TextAlignment="Center" GotFocus="PopupChange" LostFocus="PopupChange" PreviewKeyDown="tbModify_PreviewKeyDown" />
+                            <Popup x:Name="popCompCol" Placement="Bottom" PlacementTarget="{Binding ElementName=tbCompCol}" IsOpen="False">
+                                <TextBlock x:Name="tbPopCompCol" Background="AliceBlue" Padding="5">Insert a numeric value and hit enter.</TextBlock>
+                            </Popup>
+                        </StackPanel>
+
+                        <Label x:Name="lblCompsWidth" Grid.Column="0" Grid.Row="1" Content="Width:" HorizontalAlignment="Left" VerticalAlignment="Center"                                Margin="10,0,0,0"/>
+                        <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0">
+                            <TextBox x:Name="tbCompWidth" Width="50" Height="30" Text="-" TextAlignment="Center" GotFocus="PopupChange" LostFocus="PopupChange" />
+                            <Popup x:Name="popCompWidth" Placement="Top" PlacementTarget="{Binding ElementName=tbCompWidth}" IsOpen="False">
+                                <TextBlock x:Name="tbPopCompWidth" Background="AliceBlue" Padding="5">Insert a numeric value and hit enter.</TextBlock>
+                            </Popup>
+                        </StackPanel>
+                        <Label x:Name="lblCompsHeight" Grid.Column="2" Grid.Row="1" Content="Height:" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0"/>
+                        <StackPanel Orientation="Horizontal" Grid.Column="3" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0">
+                            <TextBox x:Name="tbCompHeight" Width="50" Height="30" Text="-" TextAlignment="Center" GotFocus="PopupChange" LostFocus="PopupChange" />
+                            <Popup x:Name="popCompHeight" Placement="Bottom" PlacementTarget="{Binding ElementName=tbCompHeight}" IsOpen="False">
+                                <TextBlock x:Name="tbPopCompHeight" Background="AliceBlue" Padding="5">Insert a numeric value and hit enter.</TextBlock>
+                            </Popup>
+                        </StackPanel>
+                    </Grid>
                 </Grid>
+                
+                
 
                 <DataGrid x:Name="dgContent" 
                     RowHeaderWidth="30"
@@ -294,21 +373,65 @@
                         </Style>
                     </DataGrid.ColumnHeaderStyle>
                 </DataGrid>
-                <DataGrid x:Name="dgPages" Grid.Row="2" Margin="20,20,20,20"                     
+                <DataGrid x:Name="dgPages" 
+                    Grid.Row="2"
+                    Margin="20,20,20,20"                     
                     CanUserAddRows="False"
-
                     HorizontalAlignment="Stretch"
                     VerticalAlignment="Stretch"
-                    SelectionUnit="Cell" LoadingRow="dgPages_LoadingRow"
+                    SelectionUnit="Cell" 
+                    LoadingRow="dgPages_LoadingRow" AutoGeneratingColumn="dgPages_AutoGeneratingColumn"
                           >
                     <DataGrid.RowHeaderStyle>
-                        <Style TargetType="{x:Type DataGridRowHeader}">
-                            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                            <Setter Property="VerticalContentAlignment" Value="Stretch" />
-                            <Setter Property="Width" Value="24" />
-                            <Setter Property="Height" Value="24" />
+                        <Style TargetType="DataGridRowHeader" BasedOn="{StaticResource {x:Type DataGridRowHeader}}">
+                            <Setter Property="Background">
+                                <Setter.Value>
+                                    <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                                        <GradientStop Color="White" Offset="0.0" />
+                                        <GradientStop Color="LightGray" Offset="1.0" />
+                                    </LinearGradientBrush>
+                                </Setter.Value>
+                            </Setter>
+                            <Setter Property="BorderBrush" Value="{DynamicResource {x:Static SystemColors.ControlDarkBrushKey}}" />
+                            <Setter Property="HorizontalAlignment" Value="Stretch" />
+                            <Setter Property="VerticalAlignment" Value="Stretch" />
+                            <Setter Property="HorizontalContentAlignment" Value="Center" />
+                            <Setter Property="VerticalContentAlignment" Value="Center" />
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="DataGridRowHeader">
+                                        <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="1">
+                                            <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
+                                                <ContentPresenter Width="30" Height="30"
+                                              HorizontalAlignment="Center"
+                                              VerticalAlignment="Center"
+                                              Content="{TemplateBinding Content}"
+                                              ContentTemplate="{TemplateBinding ContentTemplate}"/>
+                                            </Grid>
+                                        </Border>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
                         </Style>
+
                     </DataGrid.RowHeaderStyle>
+                    <DataGrid.ColumnHeaderStyle>
+                        <Style TargetType="DataGridColumnHeader">
+                            <Setter Property="HorizontalContentAlignment" Value="Center" />
+                            <Setter Property="VerticalContentAlignment" Value="Center" />
+                            <Setter Property="Height" Value="30" />
+                            <Setter Property="Background">
+                                <Setter.Value>
+                                    <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                                        <GradientStop Color="White" Offset="0.0" />
+                                        <GradientStop Color="LightGray" Offset="1.0" />
+                                    </LinearGradientBrush>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </DataGrid.ColumnHeaderStyle>
                 </DataGrid>
 
             </Grid>
